--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,37 +8,46 @@ trigger: none
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  bkstrgrg: 'PmAKS'
+  bkstrg: 'tfstate012060038838'
+  bkcontainer: 'tfstate'
+  bkstregkey: 'devpipeline.terraform.tfstate'
+
 steps:
 - task: TerraformInstaller@1
   displayName: Terraform Install
   inputs:
     terraformVersion: 'latest'
 
-- task: TerraformCLI@0
+- task: TerraformTaskV4@4
   displayName: Terraform Init
   inputs:
+    provider: 'azurerm'
     command: 'init'
-    allowTelemetryCollection: true
+    backendServiceArm: 'AzureServiceConnection'
+    backendAzureRmResourceGroupName: '$(bkstrgrg)'
+    backendAzureRmStorageAccountName: '$(bkstrg)'
+    backendAzureRmContainerName: '$(bkcontainer)'
+    backendAzureRmKey: '$(bkstregkey)'
 
-- task: TerraformCLI@0
+- task: TerraformTaskV4@4
   displayName: Terraform Plan
   inputs:
     command: 'plan'
-    environmentServiceNameAzureRM: 'AzureServiceConnection'
-    allowTelemetryCollection: false
+    backendServiceArm: 'AzureServiceConnection'
 
-- task: TerraformCLI@0
+- task: TerraformTaskV4@4
   displayName: Terraform Apply
   inputs:
     command: 'apply'
-    environmentServiceNameAzureRM: 'AzureServiceConnection'
-    allowTelemetryCollection: true
+    backendServiceArm: 'AzureServiceConnection'
 
 - task: TerraformTaskV4@4
   displayName: Terraform Destroy
   inputs:
     provider: 'azurerm'
     command: 'destroy'
-    environmentServiceNameAzureRM: 'AzureServiceConnection'
+    backendServiceArm: 'AzureServiceConnection'
 
 
