--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,40 +14,66 @@ variables:
   bkcontainer: 'tfstate'
   bkstregkey: 'devpipeline.terraform.tfstate'
 
-steps:
-- task: TerraformInstaller@1
-  displayName: Terraform Install
-  inputs:
-    terraformVersion: 'latest'
+stages:
+  - stage: Terraform-Initialiaze-and-validate
+    jobs:
+      - job: TFInitialiazeAndValidate
+        continueOnError: false
+        steps:
+          - task: TerraformInstaller@1
+            displayName: Terraform Install
+            inputs:
+              terraformVersion: 'latest'
 
-- task: TerraformTaskV4@4
-  displayName: Terraform Init
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
-    backendServiceArm: 'AzureServiceConnection'
-    backendAzureRmResourceGroupName: '$(bkstrgrg)'
-    backendAzureRmStorageAccountName: '$(bkstrg)'
-    backendAzureRmContainerName: '$(bkcontainer)'
-    backendAzureRmKey: '$(bkstregkey)'
+          - task: TerraformTaskV4@4
+            displayName: Terraform Init
+            inputs:
+              provider: 'azurerm'
+              command: 'init'
+              backendServiceArm: 'AzureServiceConnection'
+              backendAzureRmResourceGroupName: '$(bkstrgrg)'
+              backendAzureRmStorageAccountName: '$(bkstrg)'
+              backendAzureRmContainerName: '$(bkcontainer)'
+              backendAzureRmKey: '$(bkstregkey)'
 
-- task: TerraformTaskV4@4
-  displayName: Terraform Plan
-  inputs:
-    command: 'plan'
-    backendServiceArm: 'AzureServiceConnection'
+          - task: TerraformTaskV4@4
+            displayName: Terraform Validate
+            inputs:
+              provider: 'azurerm'
+              command: 'validate'
 
-- task: TerraformTaskV4@4
-  displayName: Terraform Apply
-  inputs:
-    command: 'apply'
-    backendServiceArm: 'AzureServiceConnection'
+  - stage: Terraform-Plan-And-Deploy
+    condition: succeeded('Terraform-Initialiaze-and-validate')
+    dependsOn: Terraform-Initialiaze-and-validate
+    jobs:
+      - job: TFPlanAndApply
+        steps:
+          - task: TerraformInstaller@1
+            displayName: Terraform Install
+            inputs:
+              terraformVersion: 'latest'
 
-- task: TerraformTaskV4@4
-  displayName: Terraform Destroy
-  inputs:
-    provider: 'azurerm'
-    command: 'destroy'
-    backendServiceArm: 'AzureServiceConnection'
+          - task: TerraformTaskV4@4
+            displayName: Terraform Init
+            inputs:
+              provider: 'azurerm'
+              command: 'init'
+              backendServiceArm: 'AzureServiceConnection'
+              backendAzureRmResourceGroupName: '$(bkstrgrg)'
+              backendAzureRmStorageAccountName: '$(bkstrg)'
+              backendAzureRmContainerName: '$(bkcontainer)'
+              backendAzureRmKey: '$(bkstregkey)'
+          - task: TerraformTaskV4@4
+            displayName: Terraform Plan
+            inputs:
+              command: 'plan'
+              backendServiceArm: 'AzureServiceConnection'
+
+          - task: TerraformTaskV4@4
+            displayName: Terraform Apply
+            inputs:
+              command: 'apply'
+              backendServiceArm: 'AzureServiceConnection'
+
 
 
