Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'init'
+              backendServiceArm: 'AzureServiceConnection'
               backendAzureRmResourceGroupName: '$(TF_VAR_BKSTRGRG)'
               backendAzureRmStorageAccountName: '$(TF_VAR_BKSTRG)'
               backendAzureRmContainerName: '$(TF_VAR_BKCONTAINER)'
